# mayo

./: .gitignore  build.jov.sh  dune-project  test.mayo  test.txt
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: dune  mayo.cmxa
_build/default/lib/.mayo.objs/byte/: mayo.cmi  mayo.cmo  mayo.cmt
_build/default/lib/.mayo.objs/native/: mayo.cmx
_build/default/lib/.merlin-conf/: lib-mayo
test/: dune
