(lang dune 3.14)

(name mayo)

(generate_opam_files true)

(source
 (github jovecodes/mayo))

(authors "Jove Beckett")

(maintainers "Jove Beckett")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name mayo)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
